--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -1,38 +1,42 @@
+.notes_display_block {
+  height: 100vh;
+  width: 960px;
+  border: 1px solid teal;
+}
+
 .App {
-  text-align: center;
+  display: flex;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.note_block {
+  width: 860px;
+  border: 2px solid teal;
+  padding: 10px;
+  border-radius: 5px;
+  display: flex;
+  margin-bottom: 6px;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-between;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.tile {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 90%;
 }
 
-.App-link {
-  color: #61dafb;
+.buttons {
+  display: flex;
+  flex-direction: column;
+  height: 10%;
+  justify-content: flex-end;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.delete_btn {
+  background: transparent;
+  border-radius: 5px;
+  border: 2px solid teal;
+  padding: 5px;
 }
