--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -111,7 +111,7 @@ body {
 }
 
 .header_text {
-  color: white;
+  color: #363853;
   font-size: 26px;
 }
 
@@ -126,6 +126,6 @@ body {
   margin-left: 0;
   background: transparent;
   border: none;
-  padding: 5px;
+  padding-top: 5px;
   cursor: pointer;
 }
