--- a/ui/src/Modal/Modal.css
+++ b/ui/src/Modal/Modal.css
@@ -19,10 +19,11 @@
 
 .input_t {
     width: 100%;
-    background: white;
+    background: transparent;
     height: 30px;
     outline: none;
     -webkit-appearance: none;
+    border: none;
 }
 
 .modal.active {
@@ -30,10 +31,18 @@
 }
 
 .modal_content {
-    z-index: 2;
+    z-index: 66;
     padding: 20px;
     border-radius: 12px;
-    background-color: rgba(255,0,144,0.5);
+    background-color: rgba(255,0,144,0.1);
     height: 200px;
     width: 400px;
+}
+
+.zalupa {
+    position: fixed;
+    height: 100vh;
+    width: 100vw;
+    z-index: 12;
+    backdrop-filter: blur(2px);
 }
