--- a/ui/src/Modal/Modal.css
+++ b/ui/src/Modal/Modal.css
@@ -31,18 +31,26 @@
 }
 
 .modal_content {
+    display: flex;
     z-index: 66;
     padding: 20px;
     border-radius: 12px;
     background-color: rgba(255,0,144,0.1);
     height: 200px;
     width: 400px;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
-.zalupa {
-    position: fixed;
-    height: 100vh;
-    width: 100vw;
-    z-index: 12;
-    backdrop-filter: blur(2px);
+.input_btn {
+    display: flex;
+    height: min-content;
+    width: 100%;
+    justify-content: flex-end;
+}
+
+.tick {
+    border: 1px solid rgba(255, 255, 255, 0.5);;
+    border-radius: 15px;
+    background-color: rgba(255, 255, 255, 0.5);
 }
